# discord-bot-rs-template

./: .gitignore  Cargo.toml  configs.toml
crates/internal_macros/src/: lib.rs
internals/: main.rs
internals/macros/: Cargo.toml
internals/macros/src/: lib.rs
src/: configs.rs  data.rs  options.rs
src/commands/: hi.rs
src/internals/: main.rs  prelude.rs  statics.rs
